친구 api 스펙 변경, 리턴 형태 동기화
 - 호출 url 변경
 - 리턴시 res.ok, res.error로 정해진 패턴 따라가도록 변경
